after some break back in programing

--- a/html/index.html
+++ b/html/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <h3 id="MyH1">Enter the radius of a circle</h3>
+    <label>radius:</label>
+    <input type="text" id="MyInp">
+    <button id="MySubmit">Submit</button>
 
-    <p id="p1"></p>
-    <p id="p2"></p>
-    <p id="p3"></p>
-    <script src="/js/index.js"></script>
+    <script src="/js/const.js"></script>
 </body>
 </html>
